--- a/src/component/todoreact/style.css
+++ b/src/component/todoreact/style.css
@@ -226,3 +226,10 @@ input:focus {
   -webkit-transform: translateY(0) scale(1, 1);
   transform: translateY(0) scale(1, 1);
 }
+
+@media (max-width: 800px){
+  input{
+    
+    min-width: 30rem;
+  }
+}
